# slither

./: LICENSE  README.md  slither.cabal  stack.yaml
app/: Main.hs
src/: Adj.hs  Aux.hs  Color.hs  Logic.hs  Main.hs  Printer.hs  Slither.hs  Solver.hs
