name:                slither
version:             0.1.0.0
synopsis:            Slitherlink Solver
description:         Please see README.md
homepage:            https://github.com/jvanburen/slither#readme
license:             BSD3
license-file:        LICENSE
author:              Jacob Van Buren
maintainer:          jvanbure@andrew.cmu.edu
copyright:           2016 Jacob Van Buren
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, array >= 0.5, containers >= 0.5, ansi-terminal >= 0.6, union-find == 0.2, lens == 4.13
  default-language:    Haskell2010

executable slither-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , slither
  default-language:    Haskell2010

test-suite slither-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slither
                     , QuickCheck == 2.8.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jvanburen/slither

-- executable slither
--   hs-source-dirs:      src
--   main-is:             Main.hs
--   other-modules:	   Slither, Printer, Logic, Solver
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5, array >= 0.5, containers >= 0.5, ansi-terminal >= 0.6, union-find == 0.2, lens == 4.13, QuickCheck == 2.8.2
